--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -21,7 +21,14 @@
       "home": "Trang chủ",
       "help": "Trợ giúp",
       "company": "Công ty",
-      "contact": "Liên hệ"
+      "contact": "Liên hệ",
+      "about": "Về chúng tôi",
+      "services": "Dịch vụ",
+      "introduce": "Giới thiệu",
+      "personnel": "Nhân sự",
+      "terms": "Điều khoản dịch vụ",
+      "blog": "Blog",
+      "privacy": "Chính sách bảo mật"
     }
   },
   "products": {
@@ -100,16 +107,20 @@
     "register": "Đăng ký",
     "sign_up": "Đăng ký",
     "not_account": "Chưa có tài khoản?",
+    "have_account": "Đã có tài khoản?",
     "description": "Chức năng đăng nhập cho phép người dùng đăng nhập vào hệ thống bằng email/số điện thoại và mật khẩu",
     "login_success": "Đăng nhập thành công",
-    "login_failed": "Đăng nhập thất bại",
+    "login_failed": "Tên tài khoản hoặc mật khẩu không đúng",
     "login_error": "Đã xảy ra lỗi trong quá trình đăng nhập. Vui lòng thử lại sau.",
+    "logout_success": "Đã đăng xuất",
     "register_success": "Đăng ký thành công",
     "register_failed": "Đăng ký thất bại",
     "register_error": "Đã xảy ra lỗi trong quá trình đăng ký. Vui lòng thử lại sau.",
     "notification": {
       "title": "Thông báo"
     },
-    "login_other": "hoặc"
+    "login_other": "hoặc",
+    "existing_account": "Tài khoản đã tồn tại!!!",
+    "server_error": "Lỗi máy chủ. Vui lòng thử lại sau."
   }
 }
